<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/btn1"
                android:textColor="@color/white"
                android:background="#2FA3B8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/topl"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp" />


            <Button
                android:id="@+id/btn2"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chap"
                android:background="#2FA3B8"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"/>


            <Button
                android:id="@+id/btn3"
                android:textColor="@color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/urta"
                android:background="#FF5B00"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"/>



        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:background="#2FA3B8"
                android:text="@string/sentr"
                android:textColor="@color/white"
                />


            <Button
                android:id="@+id/btn8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/btn7"
                android:background="#FF5B00"
                android:text="@string/left"
                android:textColor="@color/white"
                android:layout_toRightOf="@id/pass"
                android:layout_alignLeft="@+id/pass"
                />



            <Button
                android:id="@+id/btn9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/btn7"
                android:background="#FF5B00"
                android:text="@string/err"
                android:layout_marginTop="15dp"
                android:textColor="@color/white"
                android:layout_alignRight="@+id/pass"
                />


            <Button
                android:id="@+id/pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passs"
                android:layout_alignParentStart="true"
                android:textColor="@color/white"
                android:layout_alignParentEnd="true"
                android:background="#2FA3B8"
                android:layout_alignParentBottom="true"
                />

        </RelativeLayout>

    </LinearLayout>



</LinearLayout>